Fluid: Inflow with negative initial velocity is not working #76008

Closed
opened 2020-04-22 20:09:18 +02:00 by Yusuke Yasui · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.83 (sub 13), branch: my_development (modified), commit date: 2020-04-22 15:53, hash: f9649e2bf1
Worked: 2.82a

Short description of error
For inflow object, if the initial velocity is negative value, it is not considered.

2.83
inflow_bug.png

2.82a
inflow_expected.png

Maybe the problem is the following lines in fluid.c. I guess Max cannot be used here since velx_initial/vely_initial/velz_initial are initialized to zero.

              velx_initial[d_index] = MAX2(velx_initial[d_index], velocity_map[e_index * 3]);
              vely_initial[d_index] = MAX2(vely_initial[d_index], velocity_map[e_index * 3 + 1]);
              velz_initial[d_index] = MAX2(velz_initial[d_index], velocity_map[e_index * 3 + 2]);

Exact steps for others to reproduce the error
Bake the attached file and see the result.

inflow_test.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.83 (sub 13), branch: my_development (modified), commit date: 2020-04-22 15:53, hash: `f9649e2bf1` Worked: 2.82a **Short description of error** For inflow object, if the initial velocity is negative value, it is not considered. 2.83 ![inflow_bug.png](https://archive.blender.org/developer/F8489795/inflow_bug.png) 2.82a ![inflow_expected.png](https://archive.blender.org/developer/F8489797/inflow_expected.png) Maybe the problem is the following lines in fluid.c. I guess Max cannot be used here since velx_initial/vely_initial/velz_initial are initialized to zero. ``` velx_initial[d_index] = MAX2(velx_initial[d_index], velocity_map[e_index * 3]); vely_initial[d_index] = MAX2(vely_initial[d_index], velocity_map[e_index * 3 + 1]); velz_initial[d_index] = MAX2(velz_initial[d_index], velocity_map[e_index * 3 + 2]); ``` **Exact steps for others to reproduce the error** Bake the attached file and see the result. [inflow_test.blend](https://archive.blender.org/developer/F8489794/inflow_test.blend)
Author

Added subscriber: @yiusay

Added subscriber: @yiusay
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 6524aaf685

This issue was referenced by 6524aaf685638ef5f9fdca03ae682a0b4d18c6f6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-04-23 15:05:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76008
No description provided.